...
          )}

          <FormField
            binding={emailBinding}
            label={t('auth.email')}
            ref={emailRef}
            testID="email-auth-email-input"
            placeholder={t('auth.emailPlaceholder')}
            keyboardType="email-address"
            autoCapitalize="none"
            autoCorrect={false}
            textContentType="emailAddress"
            returnKeyType="next"
...
